// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MakerEnhance renders div with default index 1`] = `
<div
  className="js-maker-enhance-wrapper"
  suppressHydrationWarning={true}
>
  <script
    async={true}
    id="maker-enhance-script"
    src="https://app.maker.co/enhance/linkesch.js"
  />
  <div
    className="js-maker-enhance-static-mount"
    id="js-maker-static-enhance-v1-218c2d7d-62da-499e-9e74-93201e1b3d56-0"
    style={
      Object {
        "height": "auto",
        "width": "100%",
      }
    }
    suppressHydrationWarning={true}
  />
</div>
`;

exports[`MakerEnhance renders div with provided index 1`] = `
<div
  className="js-maker-enhance-wrapper"
  suppressHydrationWarning={true}
>
  <script
    async={true}
    id="maker-enhance-script"
    src="https://app.maker.co/enhance/linkesch.js"
  />
  <div
    className="js-maker-enhance-static-mount"
    id="js-maker-static-enhance-v1-218c2d7d-62da-499e-9e74-93201e1b3d56-2"
    style={
      Object {
        "height": "auto",
        "width": "100%",
      }
    }
    suppressHydrationWarning={true}
  />
</div>
`;

exports[`MakerEnhance should not add script if user prop is not provided 1`] = `
<div
  className="js-maker-enhance-wrapper"
  suppressHydrationWarning={true}
>
  <script
    async={true}
    id="maker-enhance-script"
    src="https://app.maker.co/enhance/undefined.js"
  />
  <div
    className="js-maker-enhance-static-mount"
    id="js-maker-static-enhance-v1-218c2d7d-62da-499e-9e74-93201e1b3d56-0"
    style={
      Object {
        "height": "auto",
        "width": "100%",
      }
    }
    suppressHydrationWarning={true}
  />
</div>
`;

exports[`MakerEnhance should support loadingHeight prop 1`] = `
<div
  className="js-maker-enhance-wrapper"
  suppressHydrationWarning={true}
>
  <script
    async={true}
    id="maker-enhance-script"
    src="https://app.maker.co/enhance/linkesch.js"
  />
  <div
    className="js-maker-enhance-static-mount"
    data-loading-height={100}
    id="js-maker-static-enhance-v1-218c2d7d-62da-499e-9e74-93201e1b3d56-0"
    style={
      Object {
        "height": "auto",
        "width": "100%",
      }
    }
    suppressHydrationWarning={true}
  />
</div>
`;
